# PullPal

./: .env.example  .env.sample  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: pypy.yml  python-package.yml  python-tests.yml
_DEV_NOTES/: Full-review.md  Pypi-prepare-plan.md  pypi-publishing.md
examples/: fetch_latest_prs.py  fetch_specific_prs.py  save_as_json.py
pullpal/: PullPal.py  __init__.py  header.md
test_output/: vscode-248031.md
tests/: test_pullpal.py
